# Code-From-Videos

./: README.md
mylyrics/: ReadMe.md
mylyrics/episode2/: lyrics.html
mylyrics/episode2/src/: html_parser.py
mylyrics/episode2/src/mylyrics/: azlyrics.py
mylyrics/episode3/: lyrics.html
mylyrics/episode4/src/mylyrics/: azlyrics.py
mylyrics/episode5/: setup.cfg
mylyrics/episode5/src/mylyrics/: __main__.py
python_must_know/01_mutable_vs_immutable_default_arguments/: function.py
python_must_known/01_mutable_vs_immutable_default_arguments/: oop.py
pytube/: README.md  requirements.txt
pytube/code/: analytics.py  dashboard.ipynb  sort_by_views.py
pytube/code/data/: MrBeast.csv
pytube/patch/: ReadMe.txt
spark/: ep0_how_to_install_linux.md
