[metadata]
name = mylyrics 
version = 0.0.2
description = Scrape your favourite song lyrics !!! 
long_description = file: README.md
long_description_content_type = text/markdown
project_urls =
    Bug Tracker = TODO -> github issues page 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src 
packages = find:
python_requires = >=3.6
install_requires = 
    requests
    beautifulsoup4

[options.packages.find]
where = src 

[options.entry_points]
console_scripts =
    mylyrics = mylyrics.__main__:main
